--- a/about_tangerine.html
+++ b/about_tangerine.html
@@ -84,7 +84,7 @@
       <div>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="btn btn-light" role="button" href="login.html">Log in</a>
+            <a class="btn btn-light" role="button" href="login.html" id="changeIfLogged">Log in</a>
           </li>
         </ul>
       </div>
