--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
-
+      <script src="js/bootstrap.min.js"></script>
       <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase.js"></script>
       <script src="js/db_handling.js"></script>
       <!-- The firebase information. Its the following two scripts that will be added wherever firebase will be needed-->
