--- a/stairmaster.html
+++ b/stairmaster.html
@@ -81,11 +81,7 @@
       <div>
         <ul class="navbar-nav">
           <li class="nav-item">
-<<<<<<< HEAD
-            <a class="btn btn-light" role="button" href="login.html" id="changeIfLogged">Log in</a>
-=======
-            <a class="btn btn-light" role="button" href="login.html"><b>LOG IN</b> or <b>SIGN UP</b></a>
->>>>>>> 57ea33653e80b4ea6513dde2d50b96a463a8ae13
+            <a class="btn btn-light" role="button" href="login.html"  id="changeIfLogged"><b>LOG IN</b> or <b>SIGN UP</b></a>
           </li>
         </ul>
       </div>
