--- a/login.html
+++ b/login.html
@@ -130,7 +130,88 @@
             </div>
           </div>
         </div>
+
+        <!-- OR -->
+      <div class="col-2 align-self-center text-center">
+        <h5>OR</h5>
       </div>
-    </div>
+      <!-- SIGN UP FORM -->
+      <div class="col-5">
+        <div class="card">
+          <div class="card-header text-center">
+            <b>SIGN UP</b>
+          </div>
+          <div class="card-body">
+            <form class="needs-validation" novalidate>
+              <div class="form-group">
+                <label for="validationCustom01">First Name</label>
+                <input type="text" class="form-control" id="validationCustom01" placeholder="John" required>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+                <div class="invalid-feedback">
+                  Please input your first name.
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="validationCustom02">Last Name</label>
+                <input type="text" class="form-control" id="validationCustom02" placeholder="Doe" required>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+                <div class="invalid-feedback">
+                  Please input your last name.
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required>
+                <div class="invalid-feedback">
+                  Please choose a valid email.
+                </div>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+              </div>
+              <div class="form-group" id="show_hide_password">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter password" required>
+                <div class="invalid-feedback">
+                  Please choose a password.
+                </div>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+              </div>
+              <div class="text-center">
+                <button type="submit" class="btn btn-primary" id="logINButton">Sign me up!</button>
+              </div>
+            </form>
+            <!-- SIGN UP VALIDATION SCRIPT -->
+            <script>
+            // Example starter JavaScript for disabling form submissions if there are invalid fields
+            (function() {
+              'use strict';
+              window.addEventListener('load', function() {
+                // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                var forms = document.getElementsByClassName('needs-validation');
+                // Loop over them and prevent submission
+                var validation = Array.prototype.filter.call(forms, function(form) {
+                  form.addEventListener('submit', function(event) {
+                    if (form.checkValidity() === false) {
+                      event.preventDefault();
+                      event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                  }, false);
+                });
+              }, false);
+            })();
+            </script>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div><br><br>
 
 </html>
