--- a/login.html
+++ b/login.html
@@ -103,10 +103,14 @@
     </nav>
     <br><br><br><br>
     <!-- BODY -->
+    <!-- LOG IN FORM-->
     <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col align-self-center">
+      <div class="row">
+        <div class="col-5">
           <div class="card">
+            <div class="card-header text-center">
+             <b>LOG IN</b>
+           </div>
             <div class="card-body">
               <form>
                 <div class="form-group">
