--- a/login.html
+++ b/login.html
@@ -159,12 +159,27 @@
               </div>
               <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="john_doe@email.com" required>
                 <div class="invalid-feedback">
-                  Please choose a valid email.
+                  Please input a valid email.
                 </div>
                 <div class="valid-feedback">
                   Looks good!
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="validationCustomUsername">Username</label>
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroupPrepend">@</span>
+                  </div>
+                  <input type="text" class="form-control" id="validationCustomUsername" placeholder="heyitsjohn" aria-describedby="inputGroupPrepend" required>
+                  <div class="invalid-feedback">
+                    Please choose a username.
+                  </div>
+                  <div class="valid-feedback">
+                    Looks good!
+                  </div>
                 </div>
               </div>
               <div class="form-group" id="show_hide_password">
