--- a/about_tangerine.html
+++ b/about_tangerine.html
@@ -14,6 +14,7 @@
       <!-- The firebase information. Its the following two scripts that will be added wherever firebase will be needed-->
     <!--   <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase.js"></script>
       <script src="js/db_handling.js"></script> -->
+      <script src="js/loginButtonChange.js"></script>
     </head>
 
     <!-- NAVIGATION BAR -->
