--- a/login.html
+++ b/login.html
@@ -112,6 +112,7 @@
                 <div class="form-group">
                   <label for="exampleInputPassword1">Password</label>
                   <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter password">
+                  <div class = "test" style="display:none;color:red"> test </div>
                 </div>
                 <div class="form-group form-check">
                   <input type="checkbox" class="form-check-input" id="exampleCheck1">
