--- a/chest_101.html
+++ b/chest_101.html
@@ -167,15 +167,15 @@
     <div class="container">
       <div class="card-deck mx-auto" style="max-width: 36rem;">
         <div class="card">
-          <div class="card-header text-center h5">Incline Dumbbell Bench Press</div>
-          <img class="card-img-top" src="incline_db_bench.jpeg" alt="Card image cap">
+          <div class="card-header text-center h5">Push-Ups</div>
+          <img class="card-img-top" src="pushups.jpeg" alt="Card image cap">
           <div class="card-body">
-            <p class="card-text text-center"><i>(4 sets | 15, 15, 12, 12)</i></p>
-            <p class="card-text"><u>Info</u>: There will be 4 sets. All 4 will be focused on high repetitions with an emphasis on good form.
-              Increase the weight after the second set about 10-15%.</p>
-            <p class="card-text"><u>Form</u>: Grab the dumbells and hold them above you touching. Draw your shoulder blades backward. Bring
-              the bar in a straight down motion and bend your elbows just past 90 degrees. Keep arms at about a 45 degree
-              angle from your sides in order to keep pressure off your shoulders.</p>
+            <p class="card-text text-center"><i>(1 set | AMRAP)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 1 set. It will focus on taking your chest to complete exhaustion. Perform
+              as many reps as possible. If you don’t have enough energy to perform standard push-ups, do push-ups on
+              your knees.</p>
+            <p class="card-text"><u>Form</u>: Put your arms just outside shoulder width and keep a straight back. Lower yourself to
+              the ground and push yourself back up.</p>
           </div>
         </div>
       </div>
