--- a/login.html
+++ b/login.html
@@ -107,12 +107,12 @@
               <form>
                 <div class="form-group">
                   <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                  <input type="email" class="form-control logInEmailInput" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">Password</label>
                   <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter password">
-                  <div class = "test" style="display:none;color:red"> test </div>
+                  <div class = "passed" style="display:none;color:red"> test </div>
                 </div>
                 <div class="form-group form-check">
                   <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -198,6 +198,7 @@
               </div>
             </form>
             <!-- SIGN UP VALIDATION SCRIPT -->
+            <!--
             <script>
             // Example starter JavaScript for disabling form submissions if there are invalid fields
             (function() {
@@ -217,7 +218,7 @@
                 });
               }, false);
             })();
-            </script>
+          </script> -->
           </div>
         </div>
       </div>
