--- a/chest_102.html
+++ b/chest_102.html
@@ -102,80 +102,141 @@
       </div>
     </div><br><br>
     <!-- BODY -->
+    <!-- BODY -->
     <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Flat Dumbbell Bench Press</div>
-            <div class="card-body text-center">
-              <img src="flat_db_bench.jpg" class="img-fluid" alt="Flat Dumbell Bench Press">
-              <p><i>(6 sets | 12, 10, 8, 6, 2-10)</i></p>
-              <p><u>Info</u>: There will be 6 sets. The first three five sets will be focused on increasing the weight 10-15% each set while lowering the repetitions by two each time. For the last set, increase the weight another 15-20%. This will be a drop set where after completing the a challenging 2 reps, drop the weight 35-50% and complete another 10 reps.</p>
-              <p><u>Form</u>: Grip both dumbbells and hold them shoulder width apart.. Draw your shoulder blades backward. Bring the dumbells in a straight down motion and bring them so that they almost touch the anterior deltoid. Turn your hands slightly so that your arms are at about a 45 degree angle. Touch the dumbbells together at the top. Keep a slight arch in your back but your glutes on the bench.</p>
-            </div>
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Flat Dumbbell Bench Press</div>
+          <img class="card-img-top" src="flat_db_bench.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(6 sets | 12, 10, 8, 6, 2-10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 6 sets. The first three five sets will be focused on increasing the weight
+              10-15% each set while lowering the repetitions by two each time. For the last set, increase the weight another 15-20%.
+              This will be a drop set where after completing the a challenging 2 reps, drop the weight 35-50% and complete another
+              10 reps.</p>
+            <p class="card-text"><u>Form</u>: Grip both dumbbells and hold them shoulder width apart.. Draw your shoulder blades backward.
+              Bring the dumbells in a straight down motion and bring them so that they almost touch the anterior deltoid.
+              Turn your hands slightly so that your arms are at about a 45 degree angle. Touch the dumbbells together at the
+              top. Keep a slight arch in your back but your glutes on the bench.</p>
           </div>
         </div>
-      </div>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Flat Barbell Bench Press</div>
-            <div class="card-body text-center">
-              <img src="flat_bb_bench.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 10-5, 10-5, 8-5, 8-5)</i></p>
-              <p><u>Info</u>: There will be 4 sets, each a drop set. Each set will be focused on lifting a heavier weight for 10 reps during the first part of the set and dropping the weight 30-50% for the second part of the set to complete five more reps. Attempt to use the same weight for each set, even after the decrease in reps the third set.</p>
-              <p><u>Form</u>: Grab the bar just outside of shoulder width. Draw your shoulder blades backward. Bring the bar in a straight down motion and touch the bar to your chest around your sternum. Keep arms at about a 45 degree angle from your sides in order to keep pressure off your shoulders. Keep a slight arch in your back but your glutes on the bench.</p>
-            </div>
+        <div class="card">
+          <div class="card-header text-center h5">Flat Barbell Bench Press</div>
+          <img class="card-img-top" src="flat_bb_bench.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets | 10-5, 10-5, 8-5, 8-5)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets, each a drop set. Each set will be focused on lifting a heavier weight for
+              10 reps during the first part of the set and dropping the weight 30-50% for the second part of the set to complete
+               five more reps. Attempt to use the same weight for each set, even after the decrease in reps the third set.</p>
+            <p class="card-text"><u>Form</u>: Grab the bar just outside of shoulder width. Draw your shoulder blades backward. Bring the bar in
+              a straight down motion and touch the bar to your chest around your sternum. Keep arms at about a 45 degree angle
+              from your sides in order to keep pressure off your shoulders. Keep a slight arch in your back but your glutes on
+               the bench.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Incline Barbell Bench Press X Incline Dumbbell Fly</div>
-            <div class="card-body text-center">
-              <img src="incline_bb_bench.jpeg" class="img-fluid" alt="Responsive image">
-              <img src="incline_db_fly.jpg" alt="Incline Dumbbell Fly">
-              <p><i>(3 sets | 12x10, 10x10, 8x10)</i></p>
-              <p><u>Info</u>: There will be 3 sets, each a superset. First, you will perform the incline barbell press for the first part of the set with an emphasis on higher repetitions with good form. You will then superset with an incline dumbbell fly, with an emphasis on higher repetitions with good form. You will add weight to the bench press after each set but keep the dumbbell weight the same.</p>
-              <p><u>Form</u>: Grab the bar just outside of shoulder width. Draw your shoulder blades backward. Bring the bar in a straight down motion and touch the bar to your chest just below your collarbone. Keep arms at about a 45 degree angle from your sides in order to keep pressure off your shoulders. Keep a slight arch in your back but your glutes on the bench.</p>
-              <p>Turn your hands inward and grip the dumbells so that they are touching in the middle above you. Bring the dumbbells out in a smooth motion to stretch the chest but keep a bend at the elbow in order to take pressure off the shoulder.</p>
+    <div class="container">
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Incline Barbell Bench Press X Incline Dumbbell Fly</div>
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="incline_bb_bench.jpeg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="incline_db_fly.jpg" alt="Second slide">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets | 12x10, 10x10, 8x10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets, each a superset. First, you will perform the incline barbell press
+              for the first part of the set with an emphasis on higher repetitions with good form. You will then
+               superset with an incline dumbbell fly, with an emphasis on higher repetitions with good form. You will
+               add weight to the bench press after each set but keep the dumbbell weight the same.</p>
+            <p class="card-text"><u>Form</u>: Grab the bar just outside of shoulder width. Draw your shoulder blades backward. Bring
+              the bar in a straight down motion and touch the bar to your chest just below your collarbone. Keep arms
+              at about a 45 degree angle from your sides in order to keep pressure off your shoulders. Keep a slight
+              arch in your back but your glutes on the bench.</p>
+            <p class="card-text">Turn your hands inward and grip the dumbells so that they are touching in the middle above you. Bring
+               the dumbbells out in a smooth motion to stretch the chest but keep a bend at the elbow in order to
+               take pressure off the shoulder.</p>
           </div>
         </div>
-      </div>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Bodyweight Dips</div>
-            <div class="card-body text-center">
-              <img src="dips.jpeg" class="img-fluid" alt="Responsive image">
-              <p><i>(2 sets | AMRAP)</i></p>
-              <p><u>Info</u>: There will be 2 sets. Both will be focused on burning out your muscles and performing as many reps as possible with good form.</p>
-              <p><u>Form</u>: Grip the bars about shoulder width apart. With a slight lean forward, bend the arms to lower your body and stretch the chest until your arms are about at a 90 degree angle. Push yourself back up.</p>
+        <div class="card">
+          <div class="card-header text-center h5">High Cable Fly X Low Cable Fly</div>
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="high_cable_fly.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="low_cable_fly.webp" alt="Second slide">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets | 15x15, 15x15, AMRAPxAMRAP)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets, each a superset. First, you will perform the high cable fly for
+              the first part of the set with an emphasis on higher repetitions and control. You will then superset with the
+              low cable fly, with an emphasis on higher repetitions and control. The last set you will perform as many reps
+              as possible for both exercises.</p>
+            <p class="card-text"><u>Form</u>: For high cable flys, place the cable settings high and with straight arms, bring your hands
+              together to squeeze the chest around the waist area.</p>
+            <p class="card-text">For low cable flys, place the cable settings low and with straight arms, bring your hands together in front
+              of the upper chest.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">High Cable Fly X Low Cable Fly</div>
-            <div class="card-body text-center">
-              <img src="high_cable_fly.jpg" class="img-fluid" alt="Responsive image">
-              <img src="low_cable_fly.webp" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets | 15x15, 15x15, AMRAPxAMRAP)</i></p>
-              <p><u>Info</u>: There will be 3 sets, each a superset. First, you will perform the high cable fly for the first part of the set with an emphasis on higher repetitions and control. You will then superset with the low cable fly, with an emphasis on higher repetitions and control. The last set you will perform as many reps as possible for both exercises.</p>
-              <p><u>Form</u>: For high cable flys, place the cable settings high and with straight arms, bring your hands together to squeeze the chest around the waist area.</p>
-              <p>For low cable flys, place the cable settings low and with straight arms, bring your hands together in front of the upper chest.</p>
-            </div>
+    <div class="containter">
+      <div class="card-deck mx-auto" style="max-width: 36rem;">
+        <div class="card">
+          <div class="card-header text-center h5">Bodyweight Dips</div>
+          <img class="card-img-top" src="dips.jpeg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(2 sets | AMRAP)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 2 sets. Both will be focused on burning out your muscles and performing
+              as many reps as possible with good form.</p>
+            <p class="card-text"><u>Form</u>: Grip the bars about shoulder width apart. With a slight lean forward, bend the arms to lower
+              your body and stretch the chest until your arms are about at a 90 degree angle. Push yourself back up.</p>
           </div>
         </div>
       </div>
-    </div>
+    </div><br>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
 
 </html>
